--- a/main.html
+++ b/main.html
@@ -7,7 +7,53 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<form method="post">
+		<label for="name">Name</label>
+		<input type="text" id="name" required>
+		<br>
+		<br>
+		<label for="email">Email</label>
+		<input type="email" id="email" required>
+		<br>
+		<br>
+		<input type="radio" name="gender" required>
+		<label for="male">Male</label>
+		<input type="radio" name="gender" required>
+		<label for="female">Female</label>
+		<input type="radio" name="gender" required>
+		<label for="LGBTQA">LGBTQA</label>
+		<br>
+		<br>
+		<label for="laptop">Laptop Brands</label>
+		<select id="laptop" required>
+			<option value="A">Apple</option>
+			<option value="As">Asus</option>
+			<option value="HP">HP</option>
+		</select>
+		<br>
+		<br>
+		<label for="age">Age</label>
+		<input type="number" id="age" required>
+		<br>
+		<br>
+		<label for="dob">Date of Birth</label>
+		<input type="date" id="dob" required>
+		<br>
+		<br>
+		<label for="password">Password</label>
+		<input type="password" id="password" required>
+		<br>
+		<br>
+		<label for="portfolio">Portfolio URL</label>
+		<input type="url" id="portfolio">
+		<br>
+		<br>
+		<button type="submit">Submit Button</button>
+		
+
+	</form>
+	</form>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
